--- a/style.css
+++ b/style.css
@@ -1258,6 +1258,9 @@ body {
     background: rgba(255, 255, 255, 0.25);
     transform: translateY(-3px);
 }
+.page img {
+    width: 100%;
+}
 
 /* 반응형 디자인 */
 @media (max-width: 768px) {
