--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,9 @@ a {
     color: inherit;
 }
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, sans-serif;
+    font-family:
+        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
+        Arial, sans-serif;
     background: var(--bg-color);
     color: var(--text-primary);
     min-height: 100vh;
@@ -1257,7 +1258,9 @@ body {
     line-height: 1.7;
     font-size: 0.95rem;
 }
-
+.qr-code-wrapper img {
+    width: 50%;
+}
 /* CTA 섹션 */
 .cta-section {
     padding: 50px 40px;
@@ -1467,7 +1470,7 @@ body {
         display: block;
     }
     .qr-code-wrapper img {
-        width: 100%;
+        width: 70%;
     }
     .qr-code-wrapper1 img {
         width: 50%;
